基本功能完成

--- a/NETCore/CMS/CMS/Views/Home/Index.cshtml
+++ b/NETCore/CMS/CMS/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    Layout = null;
+    //Layout = null;
     ViewData["Title"] = "Home Page";
 }
-@*
+
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -106,10 +106,10 @@
                 <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
             </ul>
         </div>
-    </div>*@
+    </div>
 
 
-<!DOCTYPE html>
+@*<!DOCTYPE html>
 <html>
 <head>
     <meta charset=utf-8>
@@ -122,5 +122,5 @@
     <script type=text/javascript src=/static/js/vendor.70a84f35b98f360fe825.js></script>
     <script type=text/javascript src=/static/js/app.83698a7068712b909ab3.js></script>
 </body>
-</html>
+</html>*@
 
