--- a/NETCore/CMS/CMS/Views/Shared/_Layout.cshtml
+++ b/NETCore/CMS/CMS/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="AuthPage">登陆验证</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="TabData2">获取JSON</a></li>
                 </ul>
             </div>
         </div>
